--- a/signin.html
+++ b/signin.html
@@ -14,13 +14,21 @@
 
         <link rel="stylesheet" href="css/font.css">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/index.css">
+        <!--<link rel="stylesheet" href="css/index.css">-->
+        <link href="css/normalize.css" rel="stylesheet" type="text/css">
+        <link href="css/components.css" rel="stylesheet" type="text/css">
+        <link href="css/user-dashboard.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/message.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
+
+        <div class="login-page-wrapper">
+            <div class="login-container w-form">
+                
+        </div>
 
         <div id="noCognitoMessage" class="configMessage" style="display: none;">
             <div class="backdrop"></div>
@@ -34,18 +42,32 @@
             </div>
         </div>
 
-        <header>
-          <img src="images/logo.png">
-        </header>
+        <section class="form-wrap">
+            <div id="noCognitoMessage" class="configMessage" style="display: none;">
+                <div class="backdrop"></div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">No Cognito User Pool Configured</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>There is no user pool configured in <a href="/js/config.js">/js/config.js</a>. You'll configure this in Module 2 of the workshop.</p>
+                    </div>
+                </div>
+            </div>
+    
+            <header>
+              <img style="width: auto; height: 3cm" src="images/winko-logo-v7-canvas.png">
+            </header>
 
 
         <section class="form-wrap">
-            <h1>Sign In</h1>
+            <h1></h1>
             <form id="signinForm">
-              <input type="email" id="emailInputSignin" placeholder="Email" required>
-              <input type="password" id="passwordInputSignin" placeholder="Password" pattern=".*" required>
+              <input type="email" class="signup-field w-input" id="emailInputSignin" placeholder="Email" required>
+              <input type="password" class="signup-field w-input" id="passwordInputSignin" placeholder="Password" pattern=".*" required>
 
-              <input type="submit" value="Sign in">
+              <input type="submit" class="login-button w-button" value="Login">
+              <input type="submit" onclick="window.location.href='./register.html'" class="login-button w-button" value="Signup">
             </form>
         </section>
 
